--- a/arpnamer.conf
+++ b/arpnamer.conf
@@ -1,5 +1,6 @@
 # Arpnamer System Configuration
-# Version 1.0.0
+# 
+# Config file will not be overwritten when upgraded
 
 # Valid options for logoutput is "localsyslog, remotesyslog, or file"
 # file is output is always generated even when a syslog option is chosen.
